# elam_emulator

./: CMakeLists.txt  addplcdialog.cpp  addplcdialog.h  addplcdialog.ui  bitsmodel.cpp  bitsmodel.h  circle.c  circle.h  crc16.c  crc16.h  editorsettingdialog.cpp  editorsettingdialog.h  editorsettingdialog.ui  elam_emulator.pro  elam_emulator.qrc  hexitemdelegate.cpp  hexitemdelegate.h  hexspinbox.cpp  hexspinbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mb_regs.cpp  mb_regs.h  modbus.c  modbus.h  registermodel.cpp  registermodel.h  scripteditor.cpp  scripteditor.h  scripteditor.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
